@@ -1,5 +1,5 @@
 /* rglclock - Rotating GL Clock.
-   Copyright (C) 1998 Hypercore Software Design, Ltd.
+   Copyright (C) 1998, 1999 Hypercore Software Design, Ltd.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License as
@@ -48,7 +48,8 @@ glclock::operator GtkWidget *() const
 void
 glclock::describe (GtkWidget *widget)
 {
-  show_about(gtk_widget_get_toplevel(drawing_area));
+  about_dialog about;
+  about.show(gtk_widget_get_toplevel(drawing_area));
 }
 
 glclock::~glclock ()
