@@ -1,5 +1,15 @@
 1999-02-02  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
+	* glclock.cc (describe): Use about_dialog.
+
+	* about.cc (handle_ok): Renamed from ok.
+	(about_dialog, ~about_dialog, show): New methods, replacing
+	show_about.
+	(populate): New function.
+	(show_about): Removed.
+
+	* glclock.h (class about_dialog): New class.
+
 	* NEWS: Updated.
 	* README: Updated.
 	* TODO: Updated.
